src/objects/Area_of_Residence_Old__c.object
<CustomObject>
    <fields>
        <fullName>ANCHORID__c</fullName>
        <label>OLD ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <label>Area Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Res__c</fullName>
        <label>Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCA_LEN__c</fullName>
        <formula>LEN( CCA__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCA LEN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCA__c</fullName>
        <label>CCA</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSO_DED_No__c</fullName>
        <label>CSO_DED_No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_County__c</fullName>
        <label>City/County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_Number__c</fullName>
        <label>External ID Number</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IRE_DED__c</fullName>
        <label>IRE_DED</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LHO__c</fullName>
        <label>LHO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegCode__c</fullName>
        <label>RegCode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regcode1__c</fullName>
        <label>Regcode1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TFA__c</fullName>
        <label>TFA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tableyear2012__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tableyear2012</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>countypostcode__c</fullName>
        <label>countypostcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>district__c</fullName>
        <label>district</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fromto__c</fullName>
        <label>fromto</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndtrshsearea__c</fullName>
        <label>ndtrshsearea</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oddevensplit__c</fullName>
        <label>oddevensplit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Area of Residence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area_Res__c</columns>
        <columns>CCA__c</columns>
        <columns>City_County__c</columns>
        <columns>LHO__c</columns>
        <columns>TFA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Area_Res__c</columns>
        <columns>City_County__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>M_to_Z</fullName>
        <columns>NAME</columns>
        <columns>Area_Res__c</columns>
        <columns>CCA__c</columns>
        <columns>City_County__c</columns>
        <columns>LHO__c</columns>
        <columns>TFA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>t</value>
        </filters>
        <label>M to Z</label>
    </listViews>
    <nameField>
        <label>Street/Town/County</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Contact_00ND0000003o5l6MAA</fullName>
        <active>true</active>
        <field>Contact.Area_of_Residence_and_Reg_Code__c</field>
        <filterItems>
            <field>Area_of_Residence_Old__c.Tableyear2012__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contact_Area of Residence and Reg Code</name>
    </namedFilters>
    <pluralLabel>Areas of Residence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>